Use more getFirst()/addFirst()/isEmpty()